# git-history-evals

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  PatternDetectorChanges.md  README.md  docker-compose.yml  p1.txt  paper.aux  paper.out  paper.tex  paper.toc
experiments/: README.md  conftest.py  experiment-log.txt  experiment-results.jsonl  experiment-run.txt  experiment-summary.json  experiments3-build.txt  generate_challenges.py  metrics.py  proof_utils.py  pyproject.toml  run_agent_experiment.py  run_experiment.py  summary.py  test_summary.py
experiments/admitted-proofs/: index.txt
experiments/admitted-proofs/01-of_prefancy_identZ_correct/: .attempt.aux  attempt.glob  attempt.v  diff.txt  (+1 more)
experiments/agent/: agent.py  deps.py  runner.py  test_runner.py  test_tools_paths.py  tools.py
experiments/docker/: base.Dockerfile  commit.Dockerfile  deps.Dockerfile
experiments/experiments3/: index.txt
experiments/orchestrate/: aggregate.sh  attach.sh  build-images.sh  detect_coq_version.py  gen-compose.py  lib.sh  run-all.sh  run-commit.sh  test_aggregate.sh  test_attach.sh  test_build_images.sh  test_run_all.sh  test_run_commit.sh
experiments/results/: README.md  latest
experiments/shared/: compile.py  prompts.py  splice.py
experiments/tests/: test_compile.py  test_detect_coq_version.py  test_gen_compose.py  test_run_agent_experiment.py  test_splice.py
scaffold/: README.md  pyproject.toml
scaffold/analysis/: build_experiments3.py  lifecycle_report.py
scaffold/tests/: conftest.py  test_analyzers.py  test_git_walker.py  test_models.py
(+540 files in other folders)
