[project]
name = "git-history-eval-experiments"
version = "0.1.0"
description = "Eval pipeline (baseline + agent) for proof-completion challenges"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "pydantic>=2.10",
    "pydantic-ai>=1.76",
    "typer",
    "python-dotenv",
]

[project.scripts]
eval-baseline = "run_experiment:main"
eval-agent = "run_agent_experiment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "agent"]
include = ["run_experiment.py", "run_agent_experiment.py"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["."]
