[project]
name = "scaffold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn@for-all.dev" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.24.0",
]

[project.scripts]
scaffold = "scaffold:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
